apps/app-proxy/overlays/codefreshnew/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codefreshnew-cap-app-proxy
  namespace: codefreshnew
spec:
  ingressClassName: nginx
  rules:
  - host: 43.205.107.246.nip.io
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy
        pathType: Prefix
